<resources>
    <string name="app_name">Uroflowmetry</string>
    <!-- Home fragment strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_patient_details">Patient Details</string>
    <string name="hint_patient_id">Patient ID*</string>
    <string name="hint_patient_name">Patient Name*</string>
    <string name="hint_weight_name">Weight(in Kg)*</string>
    <string name="hint_age_name">Age*</string>
    <string name="hint_density">Density*</string>
    <string name="hint_gender_name">Gender*</string>
    <string name="hint_position_name">Position*</string>
    <string name="hint_mode_name">Mode*</string>
    <string name="hint_wait_time_name">Wait Time*</string>
    <string name="hint_referred_by_name">Referred By</string>
    <string name="hint_examined_by_name">Examined By</string>
    <string name="btn_start_new_test">Start New Test</string>
    <string name="density_correction">Density Correction</string>
    <string name="btn_cancel">Cancel</string>
    <string-array name="position_dropdown_list">
        <item>Select Position</item>
        <item>Sitting</item>
        <item>Standing</item>
    </string-array>
    <string-array name="mode_dropdown_list">
        <item>Select Test Mode</item>
        <item>Manual</item>
        <item>Auto</item>
    </string-array>
    <string-array name="wait_time_dropdown_list">
        <item>Select Wait Time</item>
        <item>120 s</item>
        <item>180 s</item>
    </string-array>

    <string-array name="gender_dropdown_list">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <!-- History Fragment string -->
    <string name="history_text_patient_name">Kumar G</string>
    <string name="search_patient">Search Patient</string>
    <string-array name="search_date_list">
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Last 2 Months</item>
        <item>Last 3 Months</item>
        <item>Last 6 Months</item>
    </string-array>

    <string name="txt_normal">Normal</string>
    <string name="txt_average">Average</string>
    <string name="txt_abnormal">Abnormal</string>

    <!-- Device Setup Fragment -->
    <string name="text_device_details">Available Devices</string>
    <string name="key_mode">test_mode</string>
    <string name="key_waiting_time">wait_time</string>
    <string name="key_patid">pat_id</string>
    <string name="key_position">position</string>
    <string name="key_test_id">test_id</string>
    <string name="key_pat_name">pat_name</string>
    <string name="key_time_string">pat_last_time_string</string>
    <string name="key_time">pat_last_time</string>
    <string name="key_test_details">test_details</string>
    <string name="key_density">density</string>
    <!--Flow Fragment -->
    <string name="text_max_flow">Max Flow</string>
    <string name="text_avg_flow">Avg Flow</string>
    <string name="text_void_volume">Void Volume</string>
    <string name="text_voiding_time">Voiding Time</string>
    <string name="text_peak_time">Peak Time</string>
    <string name="calibration_text">Follow the steps on screen. Select the check box after performing each step.</string>
    <string name="stop_test">Stop Test</string>
    <string name="test_ended">Test Ended.</string>
    <string name="txt_flow_rate">Flow rate</string>
    <string name="txt_volume">Volume</string>
    <string name="start_test">Start Test</string>
    <string name="txt_volume_ml">Volume (mL/s)</string>
    <string name="txt_flow_ml">Flow rate (mL/s)</string>

    <string name="key_is_first">isFirst</string>
    <string name="key_is_record">isRecord</string>
    <string name="key_pat_id">patId</string>
    <string name="key_wait_time">waitTime</string>
    <string name="key_test_mode">testMode</string>
    <string name="key_dev_mac">dev_mac</string>
    <string name="key_tab_frag_change">Frag_Tab_Change</string>

    <string name="about_v_titan">vTitan is a Chennai-based R&amp;D and manufacturing company working to create a new generation of affordable and state-of-the-art medical devices and equipment.</string>
    <string name="about_mission">We aim to provide affordable medical care without compromising on safety and quality, implementing the latest advances in technology and engineering science to develop critical care products. Conceived and perfected in India, our products have a distinguishable presence in the field of medical technology, and are designed to transform the future of global healthcare.</string>
    <!-- ****************    Title Strings    ************** -->
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_device_setup">Device Setup</string>
    <string name="title_hospital_setup">Hospital Settings</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="title_calibration">Calibration</string>
    <string name="title_configuration">Configuration</string>
    <string name="title_hospital_details">Hospital Details</string>


    <string name="device_connection_error">Please connect the device then start the test.</string>
    <string name="device_connection_failed">Device connection failed.</string>
    <string name="device_connection_success">Device connected successfully.</string>
    <string name="device_displaced">Jar displaced.</string>
    <string name="device_low_battery">Battery Low.</string>
    <string name="device_low_battery_alarm">Battery low, the test may stop abruptly.Change the battery immediately.</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="test_in_progress">Test in Progress,Please confirm do you want to quit ?</string>
    <string name="test_completed">Test has been completed.</string>
    <string name="do_you_want_to_download">Do you want to Mail or View?</string>
    <string name="txt_vtitan">vTitan</string>
    <string name="app_exit">Do you want to exit the app ?</string>

    <string name="hospital_details_saved">Hospital details saved successfully.</string>
    <string name="hospital_details_failed">Please fill in all the details</string>
    <string name="msg_calibration_failed">Calibration failed,please do the calibiration again.</string>
    <string name="helper_text_hospital_address">Separate the address with ( , ) comma.</string>
    <string name="msg_not_calibirated">Device not calibrated,Please calibrate the device.</string>
    <string name="msg_calibration_success">Device Calibration success.</string>
    <string name="hospital_settings">Hospital Details</string>
</resources>
