<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/background_splash"
    tools:context=".fragment.HistoryDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patient_search_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/myriad_pro_regular"
                android:hint="@string/search_patient"
                android:padding="5dp"
                app:boxStrokeColor="@color/text_bg"
                app:endIconDrawable="@drawable/search_icon"
                app:endIconMode="custom"
                app:hintTextColor="@color/font_black">
                <AutoCompleteTextView
                    android:id="@+id/patient_search_text"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myriad_pro_regular"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:completionThreshold="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:imeOptions="actionSearch"
                    android:textColor="@color/font_black"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_date_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/font_black"
                android:fontFamily="@font/myriad_pro_regular"
                android:hint="Date"
                app:hintTextColor="@color/font_black">

                <AutoCompleteTextView
                    android:id="@+id/search_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/font_black"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/myriad_pro_regular"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:padding="5dp"
                    android:textColor="@color/font_black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/patientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/myriad_pro_bold"
                android:text=""
                android:textColor="@color/font_black"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                tools:layout_editor_absoluteX="40dp" />


                <ImageButton
                    android:id="@+id/img_download"
                    android:elevation="5dp"
                    android:backgroundTint="@color/background_main_to_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_export" />


        </LinearLayout>

     <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/historyLineChart"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp" />
     </LinearLayout>

         <LinearLayout
             android:orientation="horizontal"
             android:id="@+id/llHistory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="15dp"
             android:paddingRight="5dp"
             android:background="@color/background_button_green">

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/myriad_pro_regular"
                 android:textSize="@dimen/text_size_20sp"
                 android:layout_weight="3"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteY="174dp" />

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/myriad_pro_semibold"
                 android:textSize="@dimen/text_size_25sp"
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:text="@string/txt_flow_rate"
                 android:layout_weight="1" />

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/myriad_pro_semibold"
                 android:textSize="@dimen/text_size_25sp"
                 android:gravity="center"
                 android:text="@string/txt_volume"
                 android:textColor="@color/white"
                 android:layout_weight="1" />
         </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>